# Terrain-Visualizer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Terrain Visualizer/: CMakeLists.txt  Constants.h  Input.cpp  Input.h  Shader.cpp  Shader.h  Terrain Visualizer.cpp  Terrain Visualizer.h  TerrainTexture.h  camera.h
Terrain Visualizer/include/: Main.h  Shader.h  TerrainTexture.h  camera.h  matrix.h  vector.h
Terrain Visualizer/libraries/SDL2-Linux/lib/: libSDL2-2.0.so.0.3000.5
Terrain Visualizer/libraries/SDL2-Linux/lib/cmake/SDL2/: SDL2Targets-release.cmake
Terrain Visualizer/libraries/SDL2-Windows/lib/: SDL2_test.lib  SDL2main.lib
Terrain Visualizer/libraries/SDL2-Windows/lib/pkgconfig/: sdl2.pc
Terrain Visualizer/libraries/SDL2_image-Linux/lib/: libSDL2_image-2.0.so.0.800.2
Terrain Visualizer/libraries/SDL2_image-Linux/lib/cmake/SDL2_image/: SDL2_image-shared-targets-release.cmake  SDL2_image-shared-targets.cmake
Terrain Visualizer/libraries/SDL2_image-Windows/cmake/: SDL2_image-shared-targets.cmake
Terrain Visualizer/libraries/SDL2_image-Windows/lib/: SDL2_image.lib
Terrain Visualizer/libraries/SDL2_image-Windows/lib/pkgconfig/: SDL2_image.pc
Terrain Visualizer/libraries/gladDebug/include/: glad.h
Terrain Visualizer/libraries/gladDebug/src/: glad.c
Terrain Visualizer/libraries/gladRelease/include/: glad.h
Terrain Visualizer/libraries/gladRelease/src/: glad.c
Terrain Visualizer/shaders/: flatSquare.frag  flatSquare.geom  flatSquare.tesc  flatSquare.tese  flatSquare.vert  normals.frag  normals.tese  normals.vert  wireframe.frag  wireframe.geom  wireframe.tesc  wireframe.tese
Terrain Visualizer/src/: Input.cpp  Main.cpp  Shader.cpp
